# iced-specs-template

./: Cargo.toml
src/: colony.rs  main.rs  time.rs
src/colony/: game.rs  io.rs  resources.rs
