[package]
name = "colony"
version = "0.1.0"
authors = ["Nicolas Mohr <Nico.Mohr@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
specs-derive = "0.4.1"
iced = "0.1.0"
crossbeam-channel = "0.4.2"