[package]
name = "iced-specs-template"
version = "0.1.0"
authors = ["Nicolas Mohr <nico.mohr@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
specs-derive = "0.4.1"
iced = "0.1.0"
iced_native = "0.2.0"
crossbeam-channel = "0.4.2"
# async-std = { version = "1.0", features = ["unstable"] }
